# agentic-researcher

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  start.sh
src/agentic_research/: config.py  server.py
src/agentic_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/agentic_research/agent/: graph.py  graph_lang.py
src/agentic_research/evals/: runner.py
src/agentic_research/storage/: db.py  state_store.py
src/agentic_research/tools/: arxiv_search.py  github_repo.py  llm.py  summarize.py  tasks.py
tests/: test_smoke.py
