[project]
name = "agentic-research"
version = "0.1.0"
description = "Agentic Research Assistant – end-to-end starter"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.4.0",
    "pydantic>=2.7.0",
    "sqlmodel>=0.0.16",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "PyGithub>=2.3.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "ipython"]

[tool.ruff]
line-length = 100
